<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textColorHint="#757575"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColorHint="#757575"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find" />

        <Button
            android:id="@+id/asc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asc" />

        <Button
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desc" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />

</LinearLayout>